k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sshproxy
  namespace: sshproxy
  labels:
    app: sshproxy
  annotations:
    oci.oraclecloud.com/load-balancer-type: "lb"
    service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "100"
spec:
  type: LoadBalancer
  selector:
    app: sshproxy
  ports:
  - name: ssh
    port: 2222
    targetPort: 2222
    protocol: TCP
  - name: api
    port: 8080
    targetPort: 8080
    protocol: TCP
